deployments/network/mariadb-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb-allow-webserver
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mariadb 
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: web-server             # only allow web-server pods
    ports:
      - protocol: TCP
        port: 3306                     # only MySQL/MariaDB port allowed
